# edusphere-ai-core

./: .env.example  .gitignore  Dockerfile  README.md  Zahra_pythonCode.py  config.py  docker-compose.yml  main.py  pyproject.toml  standardized_course_data.json
Data-Extraction-System/: EXTRACTION_SUMMARY.md  INDEX.md  MULTILINGUAL_GUIDE.md  MULTILINGUAL_IMPLEMENTATION_SUMMARY.md  PDF_Extraction_Recommendations.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  pdf_extractor.py  requirements.txt  test_multilingual.py  view_extracted_data.py
Data-Extraction-System-Updated/: csv_exporter.py  pdf_extractor.py  requirements.txt
Data-Extraction-System-Updated/output/: extracted_data.csv  extracted_data.json
Data-Extraction-System/output/: extracted_data.json
PDF_EXTRACTOR/: README.md  example_usage.py  requirements.txt
PDF_EXTRACTOR/pdf_extractor/: __init__.py  chart_extractor.py  image_extractor.py  table_extractor.py  text_extractor.py  utils.py
docs/: DATABASE_SETUP.md  IMPLEMENTATION.md  QUICKSTART.md
features/: __init__.py  summarisation.py
features/Data-extractor-v3/: extracted_content_v3.json  pdf_extractor_v3.py
features/extraction/: __init__.py  chart_extractor.py  extractor.py  image_extractor.py  table_extractor.py  text_extractor.py  utils.py
init_scripts/: generate_secret_key.py  init_db.py  setup_database.py
models/: __init__.py  database.py  schemas.py
services/: auth.py  example.py
tests/: test_auth.http
utils/: dependencies.py  firebase.py  logging_config.py  security.py
