[project]
name = "edusphere-ai-core"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "firebase-admin>=6.0.0",
    "greenlet>=3.2.4",
    "nltk>=3.9.2",
    "pdfplumber>=0.11.8",
    "sumy>=0.11.0",
    "numpy>=2.3.5",
]
